--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather Board</title>
 </head>
+
 <body>
   <!-- user input -->
-  <form action="">
-    <input type="text" id="city">City Name</input>
+  <form id="form">
+    <input type="text" id="city">
+    <label>City Name</label>
+    <button type="submit" id="submitBtn">Submit</button>
   </form>
-  
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="./logic/script.js"></script>
 </body>
+
 </html>
