more functions and buttons

--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
 </head>
 
 <body>
+  <header>Weather Dashboard</header>
   <!-- user input -->
   <form id="form">
     <input type="text" id="city">
     <label>City Name</label>
-    <button type="submit" id="submitBtn">Submit</button>
+    <button type="submit" id="submitBtn">Search</button>
   </form>
+  <main class="weather">
 
+  </main>
+  <aside class="history">
+
+  </aside>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="./logic/script.js"></script>
 </body>
